# ECG_PPG_denoise

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  evaluate.py  evaluate_fix.py  evaluate_v1.py  evaluate_v2.py  infer.py  infer_fix.py  pyproject.toml  requirements-dev.in  requirements.in  train.py  train_fix.py  train_v1.py  train_v2.py  utils.py
Data_Preparation/: data_preparation.py  dataset.py
artifacts/infer/: smoke_result.npz  smoke_result_postfix.npz
configs/: experiment.yaml
data/: data_detail.md  inspect_pickle.py  ppg_noise_generate.py  resample.py  visualize_signal_gradio.py
data/Data_Preparation/: Prepare_NSTDB.py  Prepare_QTDatabase.py  data_preparation.py
scripts/: evaluate.py  run_pipeline.py  train.py
src/: __init__.py
src/config/: __init__.py  base.yaml  bidmc_v2.yaml  config.py  config.yaml  fix_loader.py  loader.py  schema.py
src/dataset/: QT_dataset.py  QTdataset.py  __init__.py  bidmc_dataset.py  multimodal_dataset.py
src/ecg_ppg_denoise/: __init__.py
src/fix_model/: __init__.py  conditional_model.py  diffusion.py  main_model.py  single_encoder.py
src/losses/: __init__.py  diffusion_losses.py  diffusion_losses_fix.py  masked_losses.py
src/models/: DDPM.py  HNF.py  blocks.py  conditional_model.py  diffusion.py  diffusion_schedule.py  encoders.py  fusion.py  main_model.py  model_v1.py  quality_assessor.py  single_encoder.py  unified_diffusion_model.py
tests/: test_config_schema.py  test_hnf.py  test_imports.py  test_multimodal_diffusion_smoke.py  test_qt_dataset_and_eval_metrics.py  test_smoke_pipeline.py
(+52 files in other folders)
