[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-ppg-denoise"
version = "0.1.0"
description = "ECG+PPG 去噪论文实验框架（仅架构骨架）"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scipy>=1.12",
  "wfdb>=4.1",
  "torch>=2.2",
  "tqdm>=4.66",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
